--- a/code/bio/other/index.html
+++ b/code/bio/other/index.html
@@ -4,6 +4,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Bio Generator</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap"
